Fixing white space 	modified:   src/components/Footer.css 	modified:   src/components/body.css 	new file:   src/pages/LandingPage.tsx

--- a/SDCTA/src/components/body.css
+++ b/SDCTA/src/components/body.css
@@ -5,6 +5,7 @@ body {
 	padding: 0;
 	font-family: "Open Sans";
 	background-color: #E5E5E5;
+	overflow-x: hidden;
 }
 
 .heading {
